# bragi-midi

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  trigger-note.cpp
src/bragi/midi/v1/: constants.hpp  message.cpp  message.hpp  midi.hh  note.cpp  note.hpp  output.cpp  output.hpp
src/bragi/midi_1/: constants.hpp  message.cpp  message.hpp  midi.hh  note.cpp  note.hpp  output.cpp  output.hpp
